src/snapshots/rusty__hardware_binding__tests__hardware_collected_gv.snap
---
source: src/hardware_binding.rs
assertion_line: 226
expression: config

---
[
    HardwareBinding {
        qualified_name: ExpressionPath {
            names: [
                Name(
                    "a",
                ),
            ],
        },
        direction: Input,
        access_type: Template,
        address: [],
    },
    HardwareBinding {
        qualified_name: ExpressionPath {
            names: [
                Name(
                    "b",
                ),
            ],
        },
        direction: Output,
        access_type: Word,
        address: [
            "2",
            "5",
        ],
    },
    HardwareBinding {
        qualified_name: ExpressionPath {
            names: [
                Name(
                    "c",
                ),
            ],
        },
        direction: Output,
        access_type: Word,
        address: [
            "2",
            "5",
        ],
    },
    HardwareBinding {
        qualified_name: ExpressionPath {
            names: [
                Name(
                    "d",
                ),
            ],
        },
        direction: Output,
        access_type: Template,
        address: [],
    },
    HardwareBinding {
        qualified_name: ExpressionPath {
            names: [
                Name(
                    "x",
                ),
            ],
        },
        direction: Output,
        access_type: Template,
        address: [],
    },
    HardwareBinding {
        qualified_name: ExpressionPath {
            names: [
                Name(
                    "y",
                ),
            ],
        },
        direction: Output,
        access_type: Word,
        address: [
            "1",
        ],
    },
    HardwareBinding {
        qualified_name: ExpressionPath {
            names: [
                Name(
                    "z",
                ),
            ],
        },
        direction: Input,
        access_type: Word,
        address: [
            "1",
            "2",
        ],
    },
]
